Create edit button.

--- a/static/scss/_about.scss
+++ b/static/scss/_about.scss
@@ -78,7 +78,7 @@
     margin: 0 auto;
 }
 
-.jumbotron {
+.features-jumbotron {
     margin-bottom: 0 !important;
     padding-bottom: 5rem;
     padding-top: 0 !important;
