--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -77,7 +77,7 @@
     <div data-aos="fade-up" data-aos-duration="1500">
 
         <!-- Start Jumbotron -->
-        <div class="jumbotron">
+        <div class="features-jumbotron">
 
             <div class="features">
                 <div class="col-12">
