center preview and edit buttons.

--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -288,10 +288,12 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="preview">Preview Profile</button>
+    <div class="row justify-content-center">
 
-    <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="edit">Edit</button>
+    <button type="submit" class="btn btn-primary btn-large userarea-btn mt-5 mb-5" name="btn" value="preview">Preview Profile</button>
 
+    <button type="submit" class="btn btn-primary btn-large userarea-btn mt-5 mb-5" name="btn" value="edit">Edit</button>
+</div>
 
     </form>
 
