Add success category to flash messages.

--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -170,6 +170,12 @@ ul {
     font-weight: 700;
 }
 
+.success > .message {
+    color: $green;
+    font-size: 1.4em;
+    font-weight: 700;
+}
+
 .flashes {
     margin-right: 1em;
     margin-top: 1em;
