--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -46,7 +46,7 @@
                     <label class="profile-label" for="profile-shortDesc">
                         Short Description
                     </label>
-                    <input id="profile-shortDesc" name="shortDescription" class="form-control" type="text"
+                    <input id="profile-shortDesc" name="shortDescription" class="form-control" type="text" maxlength="200"
                         value="{{username.shortDescription}}" readonly>
                 </div>
 
