--- a/static/css/main.css
+++ b/static/css/main.css
@@ -153,6 +153,12 @@ ul {
   font-weight: 700;
 }
 
+.success > .message {
+  color: #049683;
+  font-size: 1.4em;
+  font-weight: 700;
+}
+
 .flashes {
   margin-right: 1em;
   margin-top: 1em;
@@ -309,6 +315,12 @@ ul {
 
 .error > .message {
   color: #ee4266;
+  font-size: 1.4em;
+  font-weight: 700;
+}
+
+.success > .message {
+  color: #049683;
   font-size: 1.4em;
   font-weight: 700;
 }
@@ -700,6 +712,12 @@ ul {
 
 .error > .message {
   color: #ee4266;
+  font-size: 1.4em;
+  font-weight: 700;
+}
+
+.success > .message {
+  color: #049683;
   font-size: 1.4em;
   font-weight: 700;
 }
