--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -38,7 +38,7 @@
 
             <div class="col-12 d-block" id="btn-div">
 
-                <a href="{{url_for('myprofile', username=session['username'])}}" class="btn btn-primary btn-large"
+                <a href="{{url_for('profile', username=session['username'])}}" class="btn btn-primary btn-large"
                     id="hero-btn">My Account</a>
 
             </div>
