Debugging: get profile image to show up.

--- a/templates/pages/user_details.html
+++ b/templates/pages/user_details.html
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-md-12 image-col">
                         <div class="user-image">
-                            <img src="{{user.imgUrl}}" class="profile-pic" alt="profile-image" />
+                            <img src="{{user.imgURL}}" class="profile-pic" alt="profile-image" />
                         </div>
                     </div>
                 </div>
