Debugging: getting edit function to work.

--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -59,7 +59,7 @@
                     </label>
                     <small>Please enter the URL of your profile image</small>
                     <input id="profileImg" name="imgURL" class="form-control" type="text" maxlength="200"
-                        placeholder="http://www.picturehost.com/mypic.jpg" value required>
+                        value="{{username.imgURL}}">
 
                 </div>
             </div>
