--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -14,19 +14,21 @@
         </div>
     </div>
 
-    <div class="jumbotron profile-jumbo">
+    <form id="edit-form" method="POST">
 
-        <div class="col-12">
-            <h3 class="heading text-center">My Profile</h3>
-            <div class="heading-ul"></div>
-        </div>
+        <div class="jumbotron profile-jumbo">
 
-
-
-
+            <div class="col-12">
+                <h3 class="heading text-center">My Profile</h3>
+                <div class="heading-ul"></div>
+            </div>
 
 
-        <form id="profile-form" method="POST">
+
+
+
+
+
 
 
 
@@ -98,231 +100,232 @@
 
                 </div>
             </div>
-    </div>
 
-    <div class="jumbotron profile-jumbo">
-        <div class="form-group">
+        </div>
 
-
-
-            <div class="col-12 justify-content-center">
-
-                <h3 class="heading">
-                    < body>
-                        </header>
-                </h3>
-
-            </div>
-
-            <!-- MY SKILLS SECTION -->
-
-            <div class="col-12">
-                <label class="profile-label" for="profile-skills">
-                    My skills
-                </label>
-            </div>
-
-            <!-- The Tabs -->
-
-            <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
-            <div class="row">
-                <nav>
-                    <ul class="nav nav-tabs">
-
-                        <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab"
-                                role="tab" aria-controls="skills"><i class="fas fa-share-alt"></i> I'm
-                                proficient
-                                in...</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkills-tab"
-                                role="tab" aria-controls="desiredSkills"><i class="fas fa-search"></i> Looking
-                                for...</a>
-                        </li>
-
-                    </ul>
-                </nav>
-            </div>
-            <!-- Tab Contents -->
-
-            <div class="row">
-
-                <div class="tab-content">
+        <div class="jumbotron profile-jumbo">
+            <div class="form-group">
 
 
 
-                    <!-- Begin "I'm proficient in..." Skills Tab -->
-                    <div class="tab-pane container fade show active" id="skillsTab" role="tabpanel"
-                        aria-labelledby="skills-tab">
-                        <div class="skill-column">
-                            <div class="col-12">
-                                {% for skill in skills %}
+                <div class="col-12 justify-content-center">
+
+                    <h3 class="heading">
+                        < body>
+                            </header>
+                    </h3>
+
+                </div>
+
+                <!-- MY SKILLS SECTION -->
+
+                <div class="col-12">
+                    <label class="profile-label" for="profile-skills">
+                        My skills
+                    </label>
+                </div>
+
+                <!-- The Tabs -->
+
+                <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
+                <div class="row">
+                    <nav>
+                        <ul class="nav nav-tabs">
+
+                            <li class="nav-item">
+                                <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab"
+                                    role="tab" aria-controls="skills"><i class="fas fa-share-alt"></i> I'm
+                                    proficient
+                                    in...</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkills-tab"
+                                    role="tab" aria-controls="desiredSkills"><i class="fas fa-search"></i> Looking
+                                    for...</a>
+                            </li>
+
+                        </ul>
+                    </nav>
+                </div>
+                <!-- Tab Contents -->
+
+                <div class="row">
+
+                    <div class="tab-content">
 
 
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}"
-                                        id="skill-box">
-                                    <label class="form-check-label" for="skill-box">
-                                        {{skill}}
-                                    </label>
+
+                        <!-- Begin "I'm proficient in..." Skills Tab -->
+                        <div class="tab-pane container fade show active" id="skillsTab" role="tabpanel"
+                            aria-labelledby="skills-tab">
+                            <div class="skill-column">
+                                <div class="col-12">
+                                    {% for skill in skills %}
+
+
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="skills" value="{{skill}}"
+                                            id="skill-box">
+                                        <label class="form-check-label" for="skill-box">
+                                            {{skill}}
+                                        </label>
+                                    </div>
+
+
+                                    {% endfor %}
+                                </div>
+
+                            </div>
+
+                            <!-- End "I'm proficient in..." Skills Tab -->
+                        </div>
+
+
+                        <!-- Begin "Looking for..." desired skills tab -->
+
+
+                        <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
+                            aria-labelledby="desiredSkills-tab">
+
+                            <div class="skill-column">
+
+                                <div class="col-12">
+                                    {% for skill in skills %}
+
+
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="desiredSkills"
+                                            value="{{skill}}" id="skill-box">
+                                        <label class="form-check-label" for="skill-box">
+                                            {{skill}}
+                                        </label>
+                                    </div>
+
+
+                                    {% endfor %}
                                 </div>
 
 
-                                {% endfor %}
                             </div>
-
+                            <!-- End "Looking for..." desired skills tab -->
                         </div>
 
-                        <!-- End "I'm proficient in..." Skills Tab -->
+
                     </div>
 
-
-                    <!-- Begin "Looking for..." desired skills tab -->
-
-
-                    <div class="tab-pane container fade show" id="desiredSkillsTab" role="tabpanel"
-                        aria-labelledby="desiredSkills-tab">
-
-                        <div class="skill-column">
-
-                            <div class="col-12">
-                                {% for skill in skills %}
+                </div>
+            </div>
 
 
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="desiredSkills"
-                                        value="{{skill}}" id="skill-box">
-                                    <label class="form-check-label" for="skill-box">
-                                        {{skill}}
-                                    </label>
-                                </div>
+            <!-- COMMUNICATION STYLE SECTION -->
+
+            <div class="row">
 
 
-                                {% endfor %}
-                            </div>
+                <div class="col-6">
+                    <label class="profile-label" for="profile-commstyle">
+                        Communication Style
+                    </label>
 
 
-                        </div>
-                        <!-- End "Looking for..." desired skills tab -->
+                    {% for commstyle in commstyles %}
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="communicationStyle" value="{{commstyle}}"
+                            id="comm-box">
+                        <label class="form-check-label" for="comm-box">
+                            {{commstyle}}
+                        </label>
                     </div>
-
-
+                    {% endfor %}
                 </div>
+
+
+
+
+                <!-- OTHER SECTION -->
+
+                <div class="col-6">
+                    <label class="profile-label" for="profile-other">
+                        Other
+                    </label>
+
+
+                    {% for other in other %}
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="other" value="{{other}}" id="other-box">
+                        <label class="form-check-label" for="other-box">
+                            {{other}}
+                        </label>
+                    </div>
+                    {% endfor %}
+                </div>
+
 
             </div>
         </div>
 
-
-        <!-- COMMUNICATION STYLE SECTION -->
-
-        <div class="row">
+        <div class="jumbotron profile-jumbo">
 
 
-            <div class="col-6">
-                <label class="profile-label" for="profile-commstyle">
-                    Communication Style
-                </label>
+            <div class="row">
 
+                <div class="col-12">
+                    <h3 class="heading">
+                        < footer>
 
-                {% for commstyle in commstyles %}
+                    </h3>
+                </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="communicationStyle" value="{{commstyle}}"
-                        id="comm-box">
-                    <label class="form-check-label" for="comm-box">
-                        {{commstyle}}
+                <div class="col-12">
+                    <label class="contact-label" for="contact">
+                        Contact
                     </label>
                 </div>
-                {% endfor %}
-            </div>
+
+                <div class="col-xs-6 col-md-4">
 
 
 
-
-            <!-- OTHER SECTION -->
-
-            <div class="col-6">
-                <label class="profile-label" for="profile-other">
-                    Other
-                </label>
-
-
-                {% for other in other %}
-
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" name="other" value="{{other}}" id="other-box">
-                    <label class="form-check-label" for="other-box">
-                        {{other}}
+                    <label class="contact" for="profile-contact">
+                        Github
                     </label>
+                    <input id="github" class="form-control" type="text" name="github" maxlength="50"
+                        placeholder="www.github.com/myawesomerepo">
                 </div>
-                {% endfor %}
+
+
+
+                <div class="col-xs-6 col-md-4">
+
+
+                    <label class="profile-label" for="profile-contact">
+                        LinkedIn
+                    </label>
+                    <input id="linkedin" class="form-control" type="text" name="linkedin" maxlength="50"
+                        placeholder="http://linkedin.com/srs_business_profile">
+
+                </div>
+
+                <div class="col-xs-6 col-md-4">
+
+
+                    <label class="profile-label" for="profile-contact">
+                        Twitter
+                    </label>
+                    <input id="twitter" class="form-control" type="text" name="twitter" maxlength="50"
+                        placeholder="http://www.twitter.com/tweetweet">
+
+                </div>
+
+
+
             </div>
-
-
         </div>
-    </div>
 
-    <div class="jumbotron profile-jumbo">
-
-
-        <div class="row">
-
-            <div class="col-12">
-                <h3 class="heading">
-                    < footer>
-
-                </h3>
-            </div>
-
-            <div class="col-12">
-                <label class="contact-label" for="contact">
-                    Contact
-                </label>
-            </div>
-
-            <div class="col-xs-6 col-md-4">
-
-
-
-                <label class="contact" for="profile-contact">
-                    Github
-                </label>
-                <input id="github" class="form-control" type="text" name="github" maxlength="50"
-                    placeholder="www.github.com/myawesomerepo">
-            </div>
-
-
-
-            <div class="col-xs-6 col-md-4">
-
-
-                <label class="profile-label" for="profile-contact">
-                    LinkedIn
-                </label>
-                <input id="linkedin" class="form-control" type="text" name="linkedin" maxlength="50"
-                    placeholder="http://linkedin.com/srs_business_profile">
-
-            </div>
-
-            <div class="col-xs-6 col-md-4">
-
-
-                <label class="profile-label" for="profile-contact">
-                    Twitter
-                </label>
-                <input id="twitter" class="form-control" type="text" name="twitter" maxlength="50"
-                    placeholder="http://www.twitter.com/tweetweet">
-
-            </div>
-
-
-
-        </div>
-    </div>
-
-    <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="save">Save
-        Changes</button>
+        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="save">Save
+            Changes</button>
 
     </form>
 
